--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,8 @@ group 'com.amoerie'
 version '1.0'
 
 apply plugin: 'java'
-apply plugin: 'maven-publish'
+apply plugin: 'maven'
+apply plugin: 'signing'
 
 project.sourceCompatibility = 1.6
 project.targetCompatibility = 1.6
@@ -15,19 +16,65 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
 
-publishing {
-    publications {
-        mavenJava(MavenPublication) {
-            from components.java
-        }
-    }
+task javadocJar(type: Jar) {
+    classifier = 'javadoc'
+    from javadoc
 }
 
-publishing {
+task sourcesJar(type: Jar) {
+    classifier = 'sources'
+    from sourceSets.main.allSource
+}
+
+artifacts {
+    archives javadocJar, sourcesJar
+}
+
+signing {
+    sign configurations.archives
+}
+
+uploadArchives {
     repositories {
-        maven {
-            // change to point to your repo, e.g. http://my.org/repo
-            url "$buildDir/maven"
+        mavenDeployer {
+            beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
+
+            repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2/") {
+                authentication(userName: ossrhUsername, password: ossrhPassword)
+            }
+
+            snapshotRepository(url: "https://oss.sonatype.org/content/repositories/snapshots/") {
+                authentication(userName: ossrhUsername, password: ossrhPassword)
+            }
+
+            pom.project {
+                name 'JStreams'
+                packaging 'jar'
+                // optionally artifactId can be defined here
+                description 'Contains Java 6 compatible FP streams that are immutable, lazy and chainable.'
+                url 'https://github.com/amoerie/jstreams'
+
+                scm {
+                    connection 'scm:git:git@github.com:amoerie/jstreams.git'
+                    developerConnection 'scm:git:git@github.com:amoerie/jstreams.git'
+                    url 'git@github.com:amoerie/jstreams.git'
+                }
+
+                licenses {
+                    license {
+                        name 'MIT License'
+                        url 'http://www.opensource.org/licenses/mit-license.php'
+                    }
+                }
+
+                developers {
+                    developer {
+                        id 'amoerie'
+                        name 'Alexander Moerman'
+                        email 'alexander.moerman@gmail.com'
+                    }
+                }
+            }
         }
     }
 }
